# tspp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
debug_cwd/: .prettierrc  tsconfig.json
debug_cwd/internal/lib/: builtins.d.ts
debug_cwd/src/: test.ts  test_import.ts
debug_cwd/src/nested/: test.ts
docs/: project_overview.md
include/tspp/: bind.h  tspp.h  types.h
include/tspp/builtin/: compiler.h  core.d.h  databuffer.h  fs.h  path.h  process.h  socket_server.h
include/tspp/interfaces/: IDataMarshaller.h  IScriptSystemModule.h  IWithLogging.h
include/tspp/marshalling/: ArrayMarshaller.h  DataBufferMarshaller.h  FunctionMarshaller.h  NonTrivialMarshaller.h  PointerMarshaller.h  PrimitiveMarshaller.h  TrivialStructMarshaller.h  UtilsStringMarshaller.h
include/tspp/modules/: BindingModule.h  ConsoleModule.h  DebuggerModule.h  ModuleSystemModule.h  TimeoutModule.h  TypeScriptCompilerModule.h
include/tspp/systems/: script.h
include/tspp/utils/: AsyncCallJob.h  BindObjectType.h  CallContext.h  CallProxy.h  Callback.h  Docs.h  HostObjectManager.h  JavaScriptTypeData.h  PointerMarshaller.h  SourceFileBuilder.h  Thread.h  TypeOverrides.h  TypeOverrides.hpp  UtilsStringMarshaller.h
playground/: CMakeLists.txt  main.cpp
src/: tspp.cpp
src/builtin/: databuffer.cpp  fs.cpp  path.cpp  process.cpp  process_env.cpp  socket_server.cpp
src/interfaces/: IDataMarshaller.cpp  IScriptSystemModule.cpp  IWithLogging.cpp
src/marshalling/: ArrayMarshaller.cpp  DataBufferMarshaller.cpp  FunctionMarshaller.cpp  NonTrivialMarshaller.cpp  PointerMarshaller.cpp  PrimitiveMarshaller.cpp  TrivialStructMarshaller.cpp  UtilsStringMarshaller.cpp
src/modules/: BindingModule.cpp  ConsoleModule.cpp  DebuggerModule.cpp  ModuleSystemModule.cpp  TimeoutModule.cpp  TypeScriptCompilerModule.cpp
src/systems/: script.cpp
src/utils/: ArrayMarshaller.cpp  AsyncCallJob.cpp  BindObjectType.cpp  CallContext.cpp  CallProxy.cpp  Callback.cpp  Docs.cpp  HostObjectManager.cpp  NonTrivialMarshaller.cpp  PointerMarshaller.cpp  PrimitiveMarshaller.cpp  SourceFileBuilder.cpp  Thread.cpp  TrivialStructMarshaller.cpp  UtilsStringMarshaller.cpp
test/: CMakeLists.txt  Common.h  Playground.cpp  main.cpp
